--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ h1 {
   .instructions {
     display: none;
   }
+  .arrows {
+    bottom: 8vh;
+    font-size: 14px;
+  }
 }
 @media (max-width: 430px) {
   h1 {
