Set indexing start block

--- a/subgraphs/templates/partials/ERC721KnockOffs.hbs
+++ b/subgraphs/templates/partials/ERC721KnockOffs.hbs
@@ -4,6 +4,7 @@
     source:
       address: "{{address}}"
       abi: ERC721KnockOffs
+      startBlock: {{startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
