Use same network for all data sources

--- a/subgraphs/templates/partials/ERC721KnockOffs.hbs
+++ b/subgraphs/templates/partials/ERC721KnockOffs.hbs
@@ -1,6 +1,6 @@
   - kind: ethereum/contract
     name: ERC721KnockOffs
-    network: "{{network}}"
+    network: {{network}}
     source:
       address: "{{address}}"
       abi: ERC721KnockOffs
