--- a/subgraphs/templates/subgraph.hbs
+++ b/subgraphs/templates/subgraph.hbs
@@ -2,6 +2,6 @@ specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
-{{#each dataSources}}
-{{> (lookup this "partial") this.context}}
+{{#each dataSources network=network}}
+{{> (lookup this "partial") this.context network=../network}}
 {{/each}}
