Index token owner

--- a/subgraphs/templates/partials/ERC721KnockOffs.hbs
+++ b/subgraphs/templates/partials/ERC721KnockOffs.hbs
@@ -17,4 +17,6 @@
       eventHandlers:
         - event: Minted(address,uint256,address,uint256,uint64)
           handler: handleMinted{{chainID}}
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
       file: ./src/mapping.ts
